# contextual

./: .gitignore  README.md  ctx.py  plot_results.py  pyproject.toml  run_benchmark.py
engine/: cli.py  gc.py  segment.py  store.py  strategy.py
harness/: interface.py  models.py  runner.py  tokenizer.py
strategies/: hybrid.py  naive_truncation.py  rolling_summarization.py  semantic_retrieval.py
tasks/: agentic_session_replay.py  instruction_persistence.py  multi_hop_qa.py  needle_in_haystack.py
